Fixed a bug in the styles where guitar buttons got squished
changed style of popup and changed style in general for user experience

--- a/src/main/resources/css/Popup.css
+++ b/src/main/resources/css/Popup.css
@@ -1,6 +1,23 @@
 .button-grid-popup {
     -fx-padding: 10px;
     -fx-spacing: 10px;
-    -fx-border-color: deeppink;
     -fx-border-radius: 5px;
+    -fx-border-width: 1px;
+    -fx-border-color: rgb(100, 100, 250);
+}
+
+.popup-button {
+    -fx-pref-width: 50px;
+    -fx-pref-height: 50px;
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+    -fx-border-radius: 5px;
+    -fx-background-color: white;
+}
+
+.popup-button:hover {
+    -fx-border-radius: 5px;
+    -fx-background-color: rgb(100, 100, 250);
+    -fx-border-color: white;
+    -fx-border-width: 1px;
 }
