--- a/src/main/resources/css/TabMaker.css
+++ b/src/main/resources/css/TabMaker.css
@@ -3,21 +3,21 @@
 }
 
 .root {
-    -fx-background-color: linear-gradient(to right, rgb(18, 0, 38), rgb(47, 0, 58));
-    -fx-padding: 0px 0px 10px 0px;
+    -fx-background-color: linear-gradient(to right, rgb(25, 0, 51), rgb(50, 0, 65));
+    -fx-padding: 0px 0px 20px 0px;
 }
 
 /* Make the ScrollPane itself transparent */
 .scroll-pane {
     -fx-background-color: transparent;
-    -fx-padding: 10px 10px 0px 10px;
+    -fx-padding: 20px 20px 0px 20px;
 }
 
 /* Make the viewport (content area) transparent */
 .scroll-pane .viewport {
     -fx-background-color: rgba(0, 0, 0, 0.2); /* 0.5 = 50% opacity */
     -fx-border-width: 2px;
-    -fx-border-color: gray;
+    -fx-border-color: white;
     -fx-border-radius: 5px;
 }
 
@@ -26,7 +26,7 @@
 }
 
 .scroll-bar:horizontal {
-    -fx-padding: 0px 10px 0px 10px;
+    -fx-padding: 0px 20px 0px 20px;
     -fx-background-color: inherit;
 }
 
@@ -34,7 +34,8 @@
 .scroll-bar:horizontal .decrement-button {
     -fx-background-color: rgb(100, 100, 100);
     -fx-border-width: 0;
-    -fx-padding: 5px;
+    -fx-pref-width: 20px;
+    -fx-pref-height: 20px;
 }
 
 .scroll-bar:horizontal .thumb {
@@ -43,30 +44,37 @@
 }
 
 .string-button {
-    -fx-background-color: rgb(40, 40, 40);
+    -fx-background-color: rgb(50, 50, 50);
     -fx-text-fill: white;
     -fx-font-size: 18;
     -fx-font-weight: bold;
     -fx-border-radius: 5;
+    -fx-pref-width: 50px;
+    -fx-pref-height: 50px;
 }
 
 .note-button {
-    -fx-background-color: rgb(40, 40, 40);
+    -fx-background-color: rgb(50, 50, 50);
     -fx-border-color: white;
     -fx-border-width: 1;
     -fx-border-radius: 5;
     -fx-font-size: 18;
     -fx-text-fill: white;
+    -fx-pref-width: 50px;
+    -fx-pref-height: 50px;
+    -fx-font-weight: bold;
 }
 
 .note-button:hover,
 .string-button:hover {
-    -fx-background-color: rgb(60, 60, 60);
+    -fx-background-color: rgb(70, 70, 70);
+    -fx-border-color: rgba(100, 100, 250, .45);
+;
 }
 
 .note-button:focused,
 .string-button:focused {
-    -fx-background-color: rgb(60, 60, 60);
+    -fx-background-color: rgb(80, 80, 80);
     -fx-border-color: rgb(100, 100, 250);
 }
 
@@ -79,6 +87,10 @@
     -fx-padding: 10px 10px 0px 10px;
     -fx-border-width: 0px 0px 2px 0px;
     -fx-border-color: white;
+}
+
+.tabPane {
+    -fx-padding: 0px 0px 0px 0px;
 }
 
 .tab {
